# microtest

./: .gitignore  CMakeLists.txt  README.org  build.sh  notes.org
lib/microtest/: CMakeLists.txt  expect.cpp  expect.hpp  graph.cpp  graph.hpp  microtest.cpp  microtest.hpp  mutation.cpp  mutation.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  expect.cpp  graph.cpp  logic.cpp  mutation.cpp
